<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OffloadingLibrary</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="to_the_power">to the power of</string>
    <string name="base">Base</string>
    <string name="power">Power</string>
    <string name="onDevice">Solve on Device</string>
    <string name="offload_Computation">Solve on Server</string>

</resources>
