<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thesis.offloadinglibrary.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/baseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/base"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/powerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_the_power" />

        <EditText
            android:id="@+id/powerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/power"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputLayout"
        android:layout_below="@+id/inputLayout"
        android:layout_marginTop="38dp" >

        <Button
            android:id="@+id/onDeviceButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/onDevice"
            android:onClick="computeOnDevice" />

        <Button
            android:id="@+id/onServerButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/offload_Computation"
            android:onClick="computeOnServer" />
    </LinearLayout>

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonsLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:minWidth="50dp"
        android:text=" " />

</RelativeLayout>